Fix: Add split pane to fix too long tag name is invisible in right sidebar in editor page (#205)
* fix: first version of split pane

* fix: add split pane

* fix: update ol map when resize the split pane

* refactor: remove comments

* refactor: rename functions

--- a/src/react/components/common/tagInput/tagInput.scss
+++ b/src/react/components/common/tagInput/tagInput.scss
@@ -11,7 +11,6 @@
         flex-direction: column;
         user-select: none;
         background: $lighter-1;
-        width: $tagInputWidth;
 
         &-header {
             display: flex;
@@ -34,9 +33,9 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            width: $tagInputWidth;
 
             &-container {
+                height: 404px;
                 overflow-x: visible;
                 overflow-y: auto;
             };
@@ -80,7 +79,7 @@
         margin: 2px 0;
 
         &-2 {
-            width: $tagItemWidth;
+            width: 100%;
         }
     }
 
@@ -126,6 +125,7 @@
             display: inline-flex;
             flex-grow: 1;
             align-items: center;
+            overflow: hidden;
         }
 
         &-editor {
@@ -151,7 +151,6 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             align-items: center;
-            overflow: hidden;
 
             &-typed {
                 width: $tagTextLinkedWidth;
@@ -162,6 +161,7 @@
     &-icons-container {
         display: inline-flex;
         font-weight: 600;
+        margin-left: 5px;
         align-items: center;
     }
 
