--- a/src/react/components/pages/editorPage/editorPage.scss
+++ b/src/react/components/pages/editorPage/editorPage.scss
@@ -37,10 +37,11 @@
   &-right-sidebar {
     display: flex;
     margin-left: auto;
-    width: $tagInputWidth;
+    width: 100%;
   }
 
   &-content {
+    height: 100%;
     flex-grow: 1;
     display: flex;
     flex-direction: row;
@@ -49,6 +50,7 @@
       flex-grow: 1;
       display: flex;
       flex-direction: column;
+      height: 100%;
 
       &-header {
         flex-basis: 50px;
@@ -58,6 +60,7 @@
         display: flex;
         flex-grow: 1;
         flex-direction: row;
+        height: 100%;
 
         position: relative;
         overflow: hidden;
